# fashio_mnist

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yaml
